--- a/README.asciidoc
+++ b/README.asciidoc
@@ -1,5 +1,5 @@
 = Storage-Units image:https://img.shields.io/badge/email-%40metio-brightgreen.svg?style=social&label=mail["Discuss on Google Groups", link="https://groups.google.com/forum/#!forum/metio"] image:https://img.shields.io/badge/irc-%23metio.wtf-brightgreen.svg?style=social&label=IRC["Chat on IRC", link="http://webchat.freenode.net/?channels=metio.wtf"]
-Sebastian Hoß <https://github.com/sebhoss[@sebhoss]>
+Sebastian Hoß <http://seb.xn--ho-hia.de/[@sebhoss]>
 :github-org: sebhoss
 :project-name: storage-units
 :project-group: de.xn--ho-hia.utils.storage_units
