added triava as alternative
Signed-off-by: Sebastian Hoß <mail@shoss.de>

--- a/README.asciidoc
+++ b/README.asciidoc
@@ -471,6 +471,7 @@ Originally inspired by link:https://github.com/twitter/util#space[Twitters util]
 == Alternatives
 
 * link:https://github.com/JakeWharton/byteunits[Byte Units]
+* link:https://github.com/trivago/triava[triava]
 
 == License
 
